# QRC-20P

./: Cargo.toml  README.md
privacy/: README.md  bn256_poseidon.rs  ffi.rs  halo2_circuits.rs  mod.rs  network_privacy.rs  privacy.rs  secure_privacy.rs  state_transitions.rs  token_factory.rs  transaction_v2.rs  universal_switch.rs  zk_proofs.rs
src/: lib.rs
src/privacy/: FIX_COMPILATION_ERRORS.md  HALO2_100_PERCENT_COMPLETE.md  HALO2_PRODUCTION_GAPS.md  README.md  README_COMPLETE_PRODUCTION.md  amount_splitter.rs  bn256_poseidon.rs  common_types.rs  complete_privacy.rs  fees_usd.rs  ffi.rs  ffi_universal_switch.rs  ffi_zk_proofs.rs  halo2_circuits.rs  halo2_range_check.rs  halo2_real_proofs.rs  merkle_tree.rs  mod.rs  network_privacy.rs  poseidon.rs  privacy.rs  private_contracts.rs  secure_privacy.rs  state.rs  state_transitions.rs  token_factory.rs  transaction_v2.rs  universal_switch.rs  validator_bridge.rs  zk_proofs.rs
src/privacy/blockchain/: state_connector.rs
src/privacy/examples/: test_scalar_methods.rs  test_scalar_random.rs  test_security_fix.rs
