[package]
name = "qoranet-privacy"
version = "0.1.0"
edition = "2021"

[lib]
name = "qoranet_privacy"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum types
ethereum-types = "0.14"
ethers = "2.0"

# Cryptography
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }

# ZK-SNARK libraries - Using Halo2 exclusively
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
halo2curves = "0.6"
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
blake2b_simd = "1.0"

# Utilities for serialization
lazy_static = "1.4"

# Storage
rocksdb = "0.21"

# Utilities
chrono = "0.4"
thiserror = "1.0"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true