[package]
name = "qoranet-privacy"
version = "0.1.0"
edition = "2021"

[lib]
name = "qoranet_privacy"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

# Ethereum types
ethereum-types = "0.14.1"  # Use 0.14.1 for compatibility with primitive-types
ethers = "2.0.14"          # Updated: specific version for compatibility

# Cryptography
sha3 = "0.10.8"
sha2 = "0.10"  # Add this - used in your code
hex = "0.4.3"
rand = "0.8.5"  # ⚠️ CHANGE: Use 0.8.5 for compatibility
secp256k1 = { version = "0.28.2", features = ["recovery", "global-context", "rand", "serde"] }  # ⚠️ CHANGE
constant_time_eq = "0.3"  # Add for secure comparisons
aes-gcm = "0.10"  # For Tor onion encryption
rand_core = "0.6"  # For OsRng

# ZK-SNARK libraries
# Using halo2-axiom for BN256 support
halo2-axiom = "0.4.0"
halo2curves-axiom = "0.5.0"
ff = "0.13.0"
group = "0.13.0"
blake2b_simd = "1.0.3"

# Storage & Utils
rocksdb = "0.24.0"
parking_lot = "0.12.4"
lazy_static = "1.5.0"
once_cell = "1.20.2"
chrono = "0.4.42"
thiserror = "2.0.16"  # OK if no errors
bincode = "1.3.3"  # ⚠️ CHANGE: Use 1.3.3
tracing = "0.1.41"
rayon = "1.7"  # Add this - used in privacy.rs

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true